--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/trackthis/js-data-memory#readme",
   "dependencies": {
-    "js-data": "^3.0.1",
-    "native-or-bluebird": "^1.2.0"
+    "any-promise": "^1.3.0",
+    "js-data": "^3.0.1"
   }
 }
