--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/trackthis/js-data-memory#readme",
   "dependencies": {
     "any-promise": "^1.3.0",
-    "js-data": "^3.0.1"
+    "js-data": "^3.0.1",
+    "js-data-adapter": "^0.8.5"
   }
 }
