--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-data-adapter": "^0.8.5"
   },
   "devDependencies": {
+    "clover": "0.0.1",
     "co-mocha": "^1.2.1",
     "nyc": "^11.4.1"
   }
